# 60_days_code-python

./: .gitignore  pyproject.toml  requirements.txt
app1 - ToDo/: cli.py  common_sample.py  functions.py  gui.py  main.py  web.py
app1 - ToDo/bonus/: 15.py  15_question.json  16.py  19_camera_in_web.py  zip_18_app_back.py  zip_18_app_front.py
app1 - ToDo/exercise/: 1_coin_flip.py  2_checker_password.py  3-gui.py
app1 - ToDo/exercise/files/: 1_coin_flip.txt
app1 - ToDo/experiment/: module_glob.py
app1 - ToDo/files/: todos.txt
